# Wikibot

./: .webui_secret_key  Agent.py  None_embeddings.npy  None_texts.json  README.md  TEST.PY  WIKIbot.ipynb  agent_v1.py  distance_between_points.py  docling_test.py  env.yml  environment.yml  json.json  kokoro_.py  piper_test.py  procesado_tfns_texts.json  processed_wikifiles.json  pu.py  pyproject.toml  request.py  tool-use-example.py  weather.py
.gradio/flagged/: dataset1.csv  log.csv
.ipynb_checkpoints/: Agent-checkpoint.py
src/Wikibot.egg-info/: PKG-INFO  SOURCES.txt
src/wikibot/: tts.py  utils.py  whisper.py
src/wikibot/rag/: tools.py
src/wikibot/tools/: local_tools.py  web_tools.py
testpdf/: alebra3.txt  transformers.txt  transformers_faiss_index.bin_embeddings.npy  tst.pdf:Zone.Identifier
whisper/: whisper.py
