[build-system]
requires = ['setuptools>=61.0']
build-backend = "setuptools.build_meta"

[project]
name = "Wikibot"
version = "0.0.1"
authors = [
  { name="Yahir Luna", email="j.luna2016@hotmail.com" },
]
description = "A small project for local tool ussage"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/josho201/Wikibot/"
Issues = "https://github.com/josho201/Wikibot/issues"